@@ -3,7 +3,6 @@
  * Pay for order form displayed after a customer has clicked the "Change Payment method" button
  * next to a subscription on their My Account page.
  *
- * @author  Prospress
  * @package WooCommerce/Templates
  * @version 1.0.0 - Migrated from WooCommerce Subscriptions v2.6.0
  */
@@ -52,8 +51,9 @@ if ( ! defined( 'ABSPATH' ) ) {
 		$pay_order_button_text     = apply_filters( 'woocommerce_change_payment_button_text', $pay_order_button_text );
 		$customer_subscription_ids = WCS_Customer_Store::instance()->get_users_subscription_ids( $subscription->get_customer_id() );
 		$payment_gateways_handler  = WC_Subscriptions_Core_Plugin::instance()->get_gateways_handler_class();
+		$available_gateways        = WC()->payment_gateways->get_available_payment_gateways();
 
-		if ( $available_gateways = WC()->payment_gateways->get_available_payment_gateways() ) :
+		if ( $available_gateways ) :
 			?>
 			<ul class="payment_methods methods">
 				<?php
@@ -89,21 +89,21 @@ if ( ! defined( 'ABSPATH' ) ) {
 			<span class="update-all-subscriptions-payment-method-wrap">
 				<?php
 				// translators: $1: opening <strong> tag, $2: closing </strong> tag
-				$label = sprintf( esc_html__( 'Update the payment method used for %1$sall%2$s of my current subscriptions', 'woocommerce-subscriptions' ), '<strong>', '</strong>' );
+				$label = sprintf( esc_html__( 'Use this payment method for %1$sall%2$s of my current subscriptions', 'woocommerce-subscriptions' ), '<strong>', '</strong>' );
 
 				woocommerce_form_field(
 					'update_all_subscriptions_payment_method',
 					array(
-						'type'    => 'checkbox',
-						'class'   => array( 'form-row-wide' ),
-						'label'   => $label,
-						'default' => apply_filters( 'wcs_update_all_subscriptions_payment_method_checked', false ),
+						'type'     => 'checkbox',
+						'class'    => array( 'form-row-wide' ),
+						'label'    => $label,
+						'required' => true, // Making the field required to help make it more prominent on the page.
+						'default'  => apply_filters( 'wcs_update_all_subscriptions_payment_method_checked', true ),
 					)
 				);
 				?>
 			</span>
 			<?php endif; ?>
-
 		<div class="form-row">
 			<?php wp_nonce_field( 'wcs_change_payment_method', '_wcsnonce', true, true ); ?>
 
